// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Photo /> should render photo (landscape center) 1`] = `
.c0 {
  grid-row-start: 0;
  grid-column: 1 / span 6;
  margin: 0;
}

.c2 {
  font-size: 1.3rem;
}

.c3 {
  color: var(--gray-2);
  display: block;
  font-size: 1.1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c1 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(0.666667 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

@media (min-width:800px) {
  .c0 {
    grid-column: 3 / span 8;
  }

  .c0 + figure {
    margin-top: 20rem;
  }
}

<div>
  <figure
    class="c0"
  >
    <div
      class="c1"
    />
    <figcaption
      class="c2"
    >
      <span>
        Single photography
      </span>
      <span
        class="c3"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`<Photo /> should render photo (landscape left) 1`] = `
.c0 {
  grid-row-start: 0;
  grid-column: 1 / span 6;
  margin: 0;
}

.c2 {
  font-size: 1.3rem;
}

.c3 {
  color: var(--gray-2);
  display: block;
  font-size: 1.1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c1 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(0.666667 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

@media (min-width:800px) {
  .c0 {
    grid-column: 2 / span 8;
  }

  .c0 + figure {
    margin-top: 20rem;
  }
}

<div>
  <figure
    class="c0"
  >
    <div
      class="c1"
    />
    <figcaption
      class="c2"
    >
      <span>
        Single photography
      </span>
      <span
        class="c3"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`<Photo /> should render photo (landscape right) 1`] = `
.c0 {
  grid-row-start: 0;
  grid-column: 1 / span 6;
  margin: 0;
}

.c2 {
  font-size: 1.3rem;
}

.c3 {
  color: var(--gray-2);
  display: block;
  font-size: 1.1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c1 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(0.666667 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

@media (min-width:800px) {
  .c0 {
    grid-column: calc(var(--grid-number-column-large) - 8) / span 8;
  }

  .c0 + figure {
    margin-top: 20rem;
  }
}

<div>
  <figure
    class="c0"
  >
    <div
      class="c1"
    />
    <figcaption
      class="c2"
    >
      <span>
        Single photography
      </span>
      <span
        class="c3"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`<Photo /> should render photo (portrait center) 1`] = `
.c0 {
  grid-row-start: 0;
  grid-column: 1 / span 5;
  margin: 0;
}

.c2 {
  font-size: 1.3rem;
}

.c3 {
  color: var(--gray-2);
  display: block;
  font-size: 1.1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c1 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(1.500000 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

@media (min-width:800px) {
  .c0 {
    grid-column: 5 / span 4;
  }

  .c0 + figure {
    margin-top: 20rem;
  }
}

<div>
  <figure
    class="c0"
  >
    <div
      class="c1"
    />
    <figcaption
      class="c2"
    >
      <span>
        Single photography
      </span>
      <span
        class="c3"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</div>
`;

exports[`<Photo /> should render photo (square center) 1`] = `
.c0 {
  grid-row-start: 0;
  grid-column: 1 / span 5;
  margin: 0;
}

.c2 {
  font-size: 1.3rem;
}

.c3 {
  color: var(--gray-2);
  display: block;
  font-size: 1.1rem;
  font-style: italic;
  margin: 0.4rem 0 0;
}

.c1 {
  background: var(--gray-4);
  position: relative;
  padding-top: calc(1.000000 * 100%);
  width: 100%;
  margin: 0 0 1rem;
}

@media (min-width:800px) {
  .c0 {
    grid-column: 4.5 / span 5;
  }

  .c0 + figure {
    margin-top: 20rem;
  }
}

<div>
  <figure
    class="c0"
  >
    <div
      class="c1"
    />
    <figcaption
      class="c2"
    >
      <span>
        Single photography
      </span>
      <span
        class="c3"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</div>
`;
